Removed problems with referenced error responses
