# app/project/views/openapi_parts/configuration_attachments.py
@@ -106,7 +106,14 @@ paths = {
                     )
                 },
                 "401": {
-                    "$ref": "#/components/errors/authentification_required",
+                    "description": "Authentification required.",
+                    "content": {
+                        "application/vnd.api+json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/authentification_required"
+                            }
+                        }
+                    },
                 },
                 "404": {
                     "$ref": "#/components/errors/not_found",
